Fixed: wflow-consoleweb - Universal Theme - Scrollbar is missing in IE.  #4936 @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/style.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/style.css
@@ -16,6 +16,7 @@ html.ismobile * {
 body {
     font-size: 13px;
     line-height: 1.42857143;
+    -ms-overflow-style: scrollbar;
 }
 
 body:not(.embeded) {
